# poetry-docker-image

./: .gitignore  Dockerfile  README.md
.github/workflows/: publish_docker_image.yml
examples/flask/: .dockerignore  Dockerfile  app.py  pyproject.toml
examples/flask/tests/: conftest.py  test_app.py
examples/helloworld/: Dockerfile
test/helloworld/: Dockerfile  pyproject.toml
