[tool.poetry]
name = "poetry-docker-flask"
version = "0.1.0"
description = "Example minimal Flask application managed by poetry"
authors = ["Soof Golan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
